@@ -106,6 +106,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #25691: Fixed crash on deleting ElementTree.Element attributes.
+
 - Issue #25624: ZipFile now always writes a ZIP_STORED header for directory
   entries.  Patch by Dingyuan Wang.
 
